--- a/style.css
+++ b/style.css
@@ -8,8 +8,9 @@
 }
 
 h1 {
-  font-weight: 700;
+  font-weight: 900;
   margin: 0;
+  color: var(--dark-blue);
 }
 
 body {
@@ -49,6 +50,11 @@ main {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  color: gray;
+}
+
+.order p {
+  line-height: 1.7;
 }
 
 .annualPlan {
@@ -59,6 +65,11 @@ main {
   background-color: var(--very-pale-blue);
   border-radius: 1rem;
   align-items: center;
+}
+
+.annualPlan span {
+  color: gray;
+  font-weight: 400;
 }
 
 h3 {
@@ -79,27 +90,44 @@ h3 {
   border-top-right-radius: 1rem;
 }
 
-.buttom1 {
+.buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.button1 {
   width: 70%;
   background-color: blue;
   border-radius: 1rem;
   display: flex;
   justify-content: center;
+  align-items: center;
   color: white;
   box-shadow: 0 12px 25px grey;
+  width: 350px;
+  height: 40px;
+  border: none;
+  font-weight: 700;
+  font-size: large;
 }
 
-.buttom1:hover {
+.button1:hover {
   background-color: rgb(97, 97, 234);
 }
 
-.buttom2 {
+.button2 {
   display: flex;
   justify-content: center;
   color: grey;
+  margin-top: 30px;
+  border: none;
+  background-color: white;
+  font-weight: 700;
+  font-size: large;
 }
 
-.buttom2:hover {
+.button2:hover {
   color: black;
 }
 
@@ -108,4 +136,22 @@ h3 {
   color: rgb(97, 97, 234);
 }
 @media (max-width: 400px) {
+  main {
+    width: 300px;
+    height: 500px;
+  }
+  .button1 {
+    width: 222px;
+    height: 40px;
+    font-size: small;
+    margin-top: 15px;
+    border-radius: 0.5rem;
+  }
+  .button2 {
+    font-size: small;
+  }
+  .annualPlan {
+    gap: 15px;
+    font-size: small;
+  }
 }
